...
    init() {
        self.environment = .production

        sessionManager = SessionManager.default

        // prepare adapter
        let defaultScenario = ProcessInfo.processInfo.environment["MOCKTURTLE_SCENARIO_IDENTIFIER"] ?? "all_valid"
        mockturtleScenarioAdapter = MockturtleRequestAdapter(defaultScenario)
        sessionManager.adapter = MasterAdapter(adapters: [mockturtleScenarioAdapter])
    }

    func foo() {
        let sessionManager = SessionManager.default
...
